# test_task_drf

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
django_apps/custom_auth/: __init__.py  apps.py  serializers.py  urls.py
django_apps/custom_auth/views/: login.py  logout.py
django_apps/posts/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py
django_apps/posts/migrations/: 0001_initial.py  0002_comment_owner_post_owner.py
django_apps/posts/views/: comment.py  post.py
services/: __init__.py  constants.py  response_types.py
services/django_apps/posts/models/: comment.py  post.py
services/django_apps/posts/urls/: docs.py
services/django_apps/posts/views/: post.py
test_task_drf/: asgi.py  settings.py  urls.py  wsgi.py
tests/: general_assert_tests.py
tests/django_apps/custom_auth/: user_factory.py
tests/django_apps/custom_auth/views/: test_login.py  test_logout.py
tests/django_apps/posts/views/comment/: __init__.py  comment_factory.py
tests/django_apps/posts/views/post/: post_factory.py  test_create.py  test_detail.py  test_list.py
